--- a/blogApp/blog/templates/blog/index.html
+++ b/blogApp/blog/templates/blog/index.html
@@ -425,7 +425,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Powered By : <a href="https://yalinhost.com">Yalin Hosting</a>.</p>
 					</footer>
 
 			</div>
