--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -87,7 +87,7 @@
 								<div class="cardLogin" id="cardLogin">
 									<div class="login-card cardLogin__face cardLogin__face--front">
 										<h2 class="major">Login</h2>
-										<form method="post" action="/api/login/">
+										<form method="post" action="api42/api/login">
 											<div class="fields">
 												<div class="field">
 													<label for="email">Username</label>
@@ -108,10 +108,9 @@
 									</div>
 									<div class="register-card cardLogin__face cardLogin__face--back">
 										<h2 class="major">Sign Up</h2> 
-										<form method="post" action="/api/signup/" id="signupForm">
+										<form method="post" action="backend/api/signup/" id="signupForm">
 											<div class="field">
 												<label for="email">Name</label>
-												<form method="post" action="/api/signup/" id="signupForm">
 												<input type="text" name="username" id="username" />
 											</div>
 											<div class="fields">
@@ -151,7 +150,6 @@
 											  </div>
 										</form>
 									</div>
-								
 								<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 								<script>
 								$(document).ready(function() {
@@ -159,7 +157,7 @@
 										e.preventDefault();
 										$.ajax({
 											type: 'POST',
-											url: '/api/signup/',
+											url: 'backend/api/signup/',
 											data: $(this).serialize(),
 											success: function(response) {
 												window.location.href = '/';
