--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Ping Peeeennnggg</title>
+	<title>Yaptim lennnnnn</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/static/assets/bootstrap/css/bootstrap.min.css" />
