JSON provider fixed

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -124,11 +124,11 @@
 														<div class="fields">
 															<div class="field">
 																<label for="email">username</label>
-																<input type="text" name="username" id="username" />
+																<input type="text" name="username" id="usernameLogin" />
 															</div>
 															<div class="field">
 																<label for="password">Password</label>
-																<input type="password" name="password" id="password" />
+																<input type="password" name="password" id="passwordLogin" />
 															</div>
 														</div>
 														<ul class="actions">
@@ -153,7 +153,7 @@
 														<div class="fields">
 															<div class="field">
 																<label for="email">username</label>
-																<input type="text" name="username" id="username" />
+																<input type="text" name="username" id="usernameRegister" />
 															</div>
 															<div class="field">
 																<label for="email">Email</label>
@@ -161,7 +161,7 @@
 															</div>
 															<div class="field">
 																<label for="password">Password</label>
-																<input type="password" name="password" id="password" />
+																<input type="password" name="password" id="passwordRegister" />
 															</div>
 														</div>
 														<ul class="actions">
