--- a/frontend/static/assets/css/main.css
+++ b/frontend/static/assets/css/main.css
@@ -1710,6 +1710,71 @@ input, select, textarea {
 			align-items: center;
 			opacity: 0;
 		}
+		
+		.dropdown {
+		    display:inline-block;
+		    margin-left:20px;
+		    padding:10px;
+		  }
+	  
+	  
+		.glyphicon-bell {
+		
+		    font-size:1.5rem;
+		  }
+	  
+		.notifications {
+		   min-width:20em; 
+		   left:0em;
+		   transform: translateY(-240px) scaleY(0);
+		  }
+
+		  .notifications-wrapper {
+		     overflow:auto;
+		      max-height:250px;
+		    }
+		
+		 .menu-title {
+		     color:#ff7788;
+		     font-size:1.5rem;
+		      display:inline-block;
+		      }
+		  
+		.glyphicon-circle-arrow-right {
+		      margin-left:10px;     
+		   }
+	   
+
+		 .notification-heading, .notification-footer  {
+		 	padding:2px 10px;
+		       }
+		   
+		   
+		.dropdown-menu.divider {
+		  margin:5px 0;          
+		  }
+	  
+		.item-title {
+		
+		 font-size:1rem;
+		 color:#000;
+		
+		}
+
+		.notifications a.content {
+		 text-decoration:none;
+		 background:#f0f0f0;
+		
+		 }
+
+		.notification-item {
+		 padding:10px;
+		 margin:5px;
+		 background:#f0f0f0;
+		 border-radius:4px;
+		 }
+	 
+	 
 /* Login Cards*/
 .card {
 	position: relative;
@@ -1742,6 +1807,9 @@ input, select, textarea {
   }
   .loginbuttons .login{
 	width: 49%;
+	white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .loginbuttons .register{
 	width: 100%;
@@ -1765,12 +1833,13 @@ input, select, textarea {
 		position: relative;
 		display: block;
 		cursor: pointer;
-		width: 100px;
+		width: 100%;
 		margin: 0 auto 50px;
 	}
 	
 	.checkbox_item:last-child .checkbox_wrap{
 		margin-bottom: 0;
+		width: 80%;
 	}
 	
 	.checkbox_item .checkbox_wrap .checkbox_inp{
@@ -1793,38 +1862,10 @@ input, select, textarea {
 		position: absolute;
 		transition: all 0.5s ease;
 	}
-	
-	
-	
-	/* basic styles */
-	.checkbox_item.citem_1 .checkbox_wrap .checkbox_mark{
-		background: #f0f0f0;
-		width: 100px;
-		height: 50px;
-		padding: 2px;
-	}
-	
-	.checkbox_item.citem_1 .checkbox_wrap .checkbox_mark:before{
-		top: 3px;
-		left: 3px;
-		width: 44px;
-		height: 44px;
-		background: #fff;
-		border-radius: 50%;
-	}
-	
-	.checkbox_item.citem_1 .checkbox_wrap .checkbox_inp:checked ~ .checkbox_mark{
-		background: #34bfa3;
-	}
-	
-	.checkbox_item.citem_1 .checkbox_wrap .checkbox_inp:checked ~ .checkbox_mark:before{
-		left: 54px;
-	}
-	
 	/* flat styles */
 	.checkbox_item.citem_2 .checkbox_wrap .checkbox_mark{
 		border: 5px solid #f0f0f0;
-		width: 100px;
+		width: 100%;
 		height: 35px;
 		padding: 2px;
 	}
@@ -1832,7 +1873,7 @@ input, select, textarea {
 	.checkbox_item.citem_2 .checkbox_wrap .checkbox_mark:before{
 		top: 2px;
 		left: 2px;
-		width: 44px;
+		width: 35%;
 		height: 22px;
 		background: #f0f0f0;
 		border-radius: 25px;
@@ -1843,48 +1884,11 @@ input, select, textarea {
 	}
 	
 	.checkbox_item.citem_2 .checkbox_wrap .checkbox_inp:checked ~ .checkbox_mark:before{
-		left: 44px;
+		left: 64.5%;
 		background: #34bfa3;
 	}
-	
-	/* skewed styles */
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_mark{
-		width: 100px;
-		height: 50px;
-		padding: 2px;
-		border-radius: 0;
-		transform: skew(-10deg);
-		overflow: hidden;
-	}
-	
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_mark:before,
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_mark:after{
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 50px;
-		text-align: center;
-		line-height: 50px;
-		font-size: 25px;
-		color: #fff;
-		font-weight: bold;
-	}
-	
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_mark:before{
-		content: "NO";
-		background: #f0f0f0;
-	}
-	
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_mark:after{
-		content: "YES";
-		left: -100px;
-		background: #34bfa3;
-	}
-	
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_inp:checked ~ .checkbox_mark:after{
-		left: 0;
-	}
-	
-	.checkbox_item.citem_3 .checkbox_wrap .checkbox_inp:checked ~ .checkbox_mark:before{
-		left: 100px;
+
+	.error-message{
+		background-color: rgba(255, 255, 255, 0.075);
+		color: white !important;
 	}
