--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -208,7 +208,7 @@
 						<div class="container">
 							<div class="row d-flex align-items-center">
 								<div class="col-md-6">
-									<img src="/static/images/Default Profile Picture.jpg" width="200px" class="img-fluid rounded-circle" id="profilePicture" alt="Profil Resmi">
+									<img src="/static/pofiles/image/tyler.png" width="200px" class="img-fluid rounded-circle" id="profilePicture" alt="Profil Resmi">
 									
 								</div>
 								<div class="col-md-6" id="profileContent">
@@ -223,7 +223,6 @@
 											<li class="loginbuttons">
 												<a href="#" onclick="openIntro('profileSetting')"><button type="submit" value="Settings" class="button primary login">Settings</button></a>
 												<button type="submit" id="logOut" value="Logout" class="button login">Logout</button>
-												<button type="submit" id="logDeneme" value="Deneme" class="button login">deneme</button>
 	
 											</li>
 	
@@ -242,7 +241,7 @@
 										<div class="fields">
 											<div class="field">
 												<label for="profilePicture">Profile Picture</label>
-												<input type="file" name="profilePicture" id="profilePicture">
+												<input type="file" accept=".jpg, .jpeg, .png" name="profilePicture" id="profilePicture">
 											</div>
 											<div class="field">
 												<label for="usernameSetting">Username</label>
