--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -97,7 +97,7 @@
 							<div class="row" style="height: 25em;">
 								<div class="col-12" id="pongParent">
 									<div id="score">
-										<span id="player1-score">0</span> - <span id="player2-score">0</span>
+										<p>Player 1 Score: <span id="player1-score">0</span> - Player 2 Score: <span id="player2-score">0</span>
 									</div>
 									<canvas id="gameCanvas" style="width: 100%; height: 95%;">Press 'Enter' to Start</canvas>
 								</div>
@@ -208,7 +208,7 @@
 						<div class="container">
 							<div class="row d-flex align-items-center">
 								<div class="col-md-6">
-									<img src="/static/pofiles/image/tyler.png" width="200px" class="img-fluid rounded-circle" id="profilePicture" alt="Profil Resmi">
+									<img src="/static/pofiles/image/Default Profile Picture.jpg" height="200px" width="200px" class="img-fluid rounded-circle" id="profilePicture" alt="Profil Resmi">
 									
 								</div>
 								<div class="col-md-6" id="profileContent">
@@ -241,11 +241,11 @@
 										<div class="fields">
 											<div class="field">
 												<label for="profilePicture">Profile Picture</label>
-												<input type="file" accept=".jpg, .jpeg, .png" name="profilePicture" id="profilePicture">
+												<input type="file" accept=".jpg, .jpeg, .png" name="profilePicture" id="profilePictureSetting">
 											</div>
 											<div class="field">
-												<label for="usernameSetting">Username</label>
-												<input type="text" name="usernameSetting" id="usernameSetting">
+												<label for="fullNameSetting">Full Name</label>
+												<input type="text" name="fullNameSetting" id="fullNameSetting">
 											</div>
 											<div class="field">
 												<label for="emailSetting">Email</label>
